Add external sources required for build

--- a/.abf.yml
+++ b/.abf.yml
@@ -2,3 +2,10 @@ removed_sources:
   HandBrake-0.9.9.tar.bz2: 64414bdc425115545f7dd735c7d1e30b8b005056
 sources:
   HandBrake-0.10.2.tar.bz2: 857c1c0c274f086424ce7863940c5ee0fd065c40
+  fdk-aac-v0.1.1-6-gbae4553.tar.bz2: e15a3f6995e62c8ceb13557ba454e4b5fb3852bc
+  libav-v10.1.tar.bz2: 67a5f4c74f2092e8c8d5025fc598d5f34713d25e
+  libbluray-0.5.0.tar.bz2: fb01834ef31710afae399d7e631d236bfe5bec79
+  libdvdnav-5.0.1-0-gaa3659d.tar.gz: 4b61f17a283ab27e1c305911577534e2147e0840
+  libdvdread-5.0.0-6-gcb1ae87.tar.gz: f2b95e35c292b2563d7f9b65cb7809e0a96cf349
+  libvpx-v1.3.0.tar.bz2: 191b95817aede8c136cc3f3745fb1b8c50e6d5dc
+  x265-9329-0d30d2641875-1.5.tar.bz2: 1233c530d834c97fcb45e8585ebedcf24778ecc3
