--- a/.abf.yml
+++ b/.abf.yml
@@ -1,11 +1,8 @@
-removed_sources:
-  HandBrake-0.9.9.tar.bz2: 64414bdc425115545f7dd735c7d1e30b8b005056
 sources:
-  HandBrake-1.0.7.tar.bz2: fb5907840c0688e0692f092ecc592af8a6fa7e55
-  fdk-aac-v0.1.1-6-gbae4553.tar.bz2: e15a3f6995e62c8ceb13557ba454e4b5fb3852bc
-  libav-v10.1.tar.bz2: 67a5f4c74f2092e8c8d5025fc598d5f34713d25e
-  libbluray-0.5.0.tar.bz2: fb01834ef31710afae399d7e631d236bfe5bec79
-  libdvdnav-5.0.1-0-gaa3659d.tar.gz: 4b61f17a283ab27e1c305911577534e2147e0840
-  libdvdread-5.0.0-6-gcb1ae87.tar.gz: f2b95e35c292b2563d7f9b65cb7809e0a96cf349
-  libvpx-v1.3.0.tar.bz2: 191b95817aede8c136cc3f3745fb1b8c50e6d5dc
-  x265-9329-0d30d2641875-1.5.tar.bz2: 1233c530d834c97fcb45e8585ebedcf24778ecc3
+  HandBrake-1.1.1-source.tar.bz2: 4382f6cd053ea596cf7634f78550e605a574b34b
+  libav-12.3.tar.gz: 7b2a1b16da98f2b21c590c05e0d10c6ac453454b
+  libbluray-1.0.2.tar.bz2: 025ef1c0a25b42f4a13a9fb2df09fc9cef1a821b
+  libdvdnav-5.0.3.tar.bz2: e3ec3277e37dd1714e7dc7d205b8fd084125b51a
+  libdvdread-5.0.3.tar.bz2: 3cda64c06ca9b617d976c490651db4391a162e1f
+  libvpx-1.7.0.tar.gz: fb3d4b80596d1e3b1a7f53757d63e7d2b3eeb7c9
+  x265_2.6.tar.gz: d3cb1066830b7fe779b6c9d8d774bbec7f8c1f5a
