--- a/.abf.yml
+++ b/.abf.yml
@@ -6,3 +6,4 @@ sources:
   libvpx-1.7.0.tar.gz: fb3d4b80596d1e3b1a7f53757d63e7d2b3eeb7c9
   x265_2.9.tar.gz: 3c005b4ab409c6f996b36ad88d780ff85fbc9abf
   ffmpeg-4.1.tar.bz2: dbbecc574c0a57687271165a618353d4ddbd8cfa
+  nv-codec-headers-8.1.24.2.tar.gz: d500263b2fd92a32ac383ac87762648ecf8d325b
