--- a/.abf.yml
+++ b/.abf.yml
@@ -1,9 +1,9 @@
 sources:
-  HandBrake-1.2.2-source.tar.bz2: 100e2b6a240b5743b4e31a2bee32986f791b516b
-  libbluray-1.0.2.tar.bz2: 025ef1c0a25b42f4a13a9fb2df09fc9cef1a821b
-  libdvdnav-6.0.0.tar.bz2: 09be41ff1b4e83465eb27528ba6c8325e8f054b0
-  libdvdread-6.0.0.tar.bz2: 5a01d1e6196a6ceff363455951e3682b231a3b78
-  libvpx-1.7.0.tar.gz: fb3d4b80596d1e3b1a7f53757d63e7d2b3eeb7c9
-  x265_2.9.tar.gz: 3c005b4ab409c6f996b36ad88d780ff85fbc9abf
-  ffmpeg-4.1.tar.bz2: dbbecc574c0a57687271165a618353d4ddbd8cfa
-  nv-codec-headers-8.1.24.2.tar.gz: d500263b2fd92a32ac383ac87762648ecf8d325b
+  HandBrake-1.3.0-source.tar.bz2: 1af6cee51d09d3e5207446d811765d7ddf6df0dd
+  libbluray-1.1.2.tar.bz2: 3885c0d0bd0f04a3a372ceec3a01a44a7624f272
+  libdvdnav-6.0.1.tar.bz2: 258b82156e13803f2b0dbaec74e15475b4341d2f
+  libdvdread-6.0.2.tar.bz2: a3d4b85cbe52b11cff7587ed010fa38ce512fd95
+  libvpx-1.8.1.tar.gz: 6c9a55e1f92d7301383f387486bb574f22faf855
+  x265_3.2.1.tar.gz: 0bd4889ff3ad596372ce2338f2d896947a2eec53
+  ffmpeg-4.2.1.tar.bz2: ab56e8b8fcaced4a85cebf425bfadfb4ceb71e27
+  nv-codec-headers-9.0.18.1.tar.gz: 9142b2695c39e4c870ae1db6f901bbdee391837c'
