--- a/.abf.yml
+++ b/.abf.yml
@@ -1,11 +1,11 @@
 sources:
-  HandBrake-1.3.3-source.tar.bz2: efde8bb8cbb455e92f8bafd0f092db81c4b5827b
-  libbluray-1.1.2.tar.bz2: 3885c0d0bd0f04a3a372ceec3a01a44a7624f272
-  libdvdnav-6.0.1.tar.bz2: 258b82156e13803f2b0dbaec74e15475b4341d2f
-  libdvdread-6.0.2.tar.bz2: a3d4b85cbe52b11cff7587ed010fa38ce512fd95
+  HandBrake-1.4.0-source.tar.bz2: 847c330a6699d69d209659ca781e6f79f52f0735
+  libbluray-1.3.0.tar.bz2: 981974e31bc31fb5f3e5e83a201e46c25f553659
+  libdvdnav-6.1.1.tar.bz2: 7ac76aa95d046db715763da23b7053b65cbc7540
+  libdvdread-6.1.1.tar.bz2: d2e5056de89fb5fed478c0af5a72e8b781d0c396
   libvpx-1.8.1.tar.gz: 6c9a55e1f92d7301383f387486bb574f22faf855
-  x265_3.2.1.tar.gz: 0bd4889ff3ad596372ce2338f2d896947a2eec53
-  ffmpeg-4.2.3.tar.bz2: 7be5114d169e5a1ba73ad1e844e7fb4d0fb93cc6
+  x265_3.5.tar.gz: dc8e70f441991289a9a34fd37e1649d59435bfae
+  ffmpeg-4.4.tar.bz2: 9ceaa85da43f582a46b4d92de049418fdc835152
   nv-codec-headers-9.0.18.1.tar.gz: 9142b2695c39e4c870ae1db6f901bbdee391837c
-  AMF-1.4.9.tar.gz: 11aaa2b738fd807cfc9a8b30c8d91a29bb81fa0c
-  mfx_dispatch-c200d83.tar.gz: 16387a47c430dddc4e0a96e15748fe8d10d887a2
+  AMF-1.4.18.tar.gz: d53359aed4cc57f201375c1a4a008df3593dd68f
+  mfx_dispatch-1.35.tar.gz: 6eec28f8ea58f3e08b8c1e2779dfef11434d2ba3
