--- a/.abf.yml
+++ b/.abf.yml
@@ -3,9 +3,10 @@ sources:
   libbluray-1.3.0.tar.bz2: 981974e31bc31fb5f3e5e83a201e46c25f553659
   libdvdnav-6.1.1.tar.bz2: 7ac76aa95d046db715763da23b7053b65cbc7540
   libdvdread-6.1.1.tar.bz2: d2e5056de89fb5fed478c0af5a72e8b781d0c396
-  libvpx-1.8.1.tar.gz: 6c9a55e1f92d7301383f387486bb574f22faf855
+  libvpx-1.11.0.tar.gz: 865737462d11b36f6ee1153e8b9fe90e160d4d35
   x265_3.5.tar.gz: dc8e70f441991289a9a34fd37e1649d59435bfae
-  ffmpeg-4.4.tar.bz2: 9ceaa85da43f582a46b4d92de049418fdc835152
+  ffmpeg-4.4.1.tar.bz2: 49306f284475014b8e68bff886aaeeaf0723810c
   nv-codec-headers-9.0.18.1.tar.gz: 9142b2695c39e4c870ae1db6f901bbdee391837c
   AMF-1.4.18.tar.gz: d53359aed4cc57f201375c1a4a008df3593dd68f
   mfx_dispatch-1.35.tar.gz: 6eec28f8ea58f3e08b8c1e2779dfef11434d2ba3
+  oneVPL-2021.6.0.tar.gz: 396feb4db935008c3e536e898498d9834924e325
