--- a/.abf.yml
+++ b/.abf.yml
@@ -1,5 +1,4 @@
 sources:
-  HandBrake-1.9.2-source.tar.bz2: aeedebb171e199c81b3d50b870c6fe845778fb89
   libbluray-1.3.4.tar.bz2: 3bcf069bf113de0bca0be41e26fb68c2ea1a2029
   libdvdnav-6.1.1.tar.bz2: 7ac76aa95d046db715763da23b7053b65cbc7540
   libdvdread-6.1.3.tar.bz2: 5e5721ff6ed01a9af9214be0d6563303e8bf2bed
@@ -8,3 +7,4 @@ sources:
   AMF-1.4.30-slim.tar.gz: 066599782b89b3091de6c1b2c28603473a3259b0
   mfx_dispatch-1.35.tar.gz: 6eec28f8ea58f3e08b8c1e2779dfef11434d2ba3
   oneVPL-2023.1.0.tar.gz: 57a6d562e3c1f9de81dc221ac9e16d563c0e280b
+  handbrake-1.10.0.tar.gz: 7b85cfcfc21172d182cbef73d2f8dcfa6c1a18b0
