--- a/.abf.yml
+++ b/.abf.yml
@@ -7,4 +7,4 @@ sources:
   AMF-1.4.30-slim.tar.gz: 066599782b89b3091de6c1b2c28603473a3259b0
   mfx_dispatch-1.35.tar.gz: 6eec28f8ea58f3e08b8c1e2779dfef11434d2ba3
   oneVPL-2023.1.0.tar.gz: 57a6d562e3c1f9de81dc221ac9e16d563c0e280b
-  handbrake-1.10.0.tar.gz: 7b85cfcfc21172d182cbef73d2f8dcfa6c1a18b0
+  HandBrake-1.10.0-source.tar.bz2: 32e3339236ec679ac4a208f8aecef947184f4114
