--- a/.abf.yml
+++ b/.abf.yml
@@ -2,9 +2,15 @@ sources:
   libbluray-1.3.4.tar.bz2: 3bcf069bf113de0bca0be41e26fb68c2ea1a2029
   libdvdnav-6.1.1.tar.bz2: 7ac76aa95d046db715763da23b7053b65cbc7540
   libdvdread-6.1.3.tar.bz2: 5e5721ff6ed01a9af9214be0d6563303e8bf2bed
-  ffmpeg-6.1.tar.bz2: 1b2c93bed564b31da4d76794ec317a6a54978ab1
-  nv-codec-headers-11.0.11.1.tar.gz: 5b0b506840651c1fe7a2e7ddf5d090ec774f28a8
-  AMF-1.4.30-slim.tar.gz: 066599782b89b3091de6c1b2c28603473a3259b0
   mfx_dispatch-1.35.tar.gz: 6eec28f8ea58f3e08b8c1e2779dfef11434d2ba3
   oneVPL-2023.1.0.tar.gz: 57a6d562e3c1f9de81dc221ac9e16d563c0e280b
   HandBrake-1.10.0-source.tar.bz2: 32e3339236ec679ac4a208f8aecef947184f4114
+  AMF-1.4.36-slim.tar.gz: e47f18cb8d4e53b3414e2ba4d4032f39eda7c87a
+  dav1d-1.5.1.tar.bz2: e731f67b23d5919a35eef2e2ce73b9bae6863621
+  fdk-aac-2.0.3.tar.gz: a7f42c67c0b82cdb2cd773d3ec31042fb5647c0d
+  ffmpeg-7.1.1.tar.bz2: 37a47e0db54dcba42762610e37a22319763345b0
+  nv-codec-headers-13.0.19.0.tar.gz: 00d4b6b4b5cc90680047e1efd669f33f6c137663
+  SVT-AV1-v3.1.0.tar.gz: 03f32df0246b2b061cb10e0c937deec783fa2b39
+  v2.15.0.tar.gz: ae18a22465f1577e528ad50f31a5d0d28dbaadc1
+  x265-snapshot-20250729-13276.tar.gz: 0da4ede4ec3c6fa90818011fc07c9945e6fd1569
+  zimg-snapshot-20250624.tar.gz: 0812f068a82a4657b67eeed31d5b33eb7a91736e
